# amrita-minor-project-python

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: 01_data_collection.ipynb  01_test.ipynb  02_data_preprocessing.ipynb  02_eda_and_cleaning.ipynb  02_eda_and_cleaning.ipynb.ipynb  02_preprocessing.ipynb  03_model_training.ipynb  04_prediction.ipynb  04_sample_prediction.ipynb
src/app/: main.py
src/sentiment_analysis/: models.py  utils.py
src/sentiment_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
