[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7,<3.12"

dependencies = [
    "numpy==2.4.0",          # Latest stable; supports Python 3.11-3.14
    "pandas==2.3.3",         # Latest stable; fully compatible with NumPy 2.x
    "scikit-learn==1.8.0",   # Latest stable; requires Python 3.10+
    "scipy==1.16.3",         # Latest stable; compatible with NumPy 2.4.0
    "matplotlib==3.10.8",    # Latest stable; supports the latest NumPy/Python
    "jupyterlab==4.4.7",     # Your current version is stable and fine
    "ipykernel>=6.29.0",     # Updated for better 3.11/JupyterLab 4 stability
    "joblib==1.4.2",         # Latest stable version
    "threadpoolctl==3.5.0"   # Latest stable version
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
