[project]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7,<3.12"

dependencies = [
    "numpy==2.4.0",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "tensorflow==2.20.0",
    "keras==3.13.0",
    "nltk==3.9.2",
    "jupyterlab==4.4.7",
    "ipykernel>=6.29.0",
    "joblib==1.4.2",
    "threadpoolctl==3.5.0",
    "kagglehub[pandas-datasets]==0.3.13",
    "python-dotenv==1.0.1",
    "ipywidgets==8.1.5",
    "widgetsnbextension==4.0.13",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",  
    "python-multipart==0.0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
